added category views

--- a/ElevenNoteWebApp/Client/_Imports.razor
+++ b/ElevenNoteWebApp/Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using ElevenNoteWebApp.Client
 @using ElevenNoteWebApp.Client.Shared
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
